tests/fixtures/LatestTests/ObjectTests/errors/assign_to_nonexistent_member.fg
/; EXPECT_ERROR: MemberNotFoundInObject
type Person = {
    name: str
    age: int
}

var p: Person = {
    name: "John",
    age: 30
}

p.nonexistent = "value"

